[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/Ball.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/Circle_100x100.png" type="Texture" id=2]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.1
rough = true
bounce = 0.4

[sub_resource type="CircleShape2D" id=2]
radius = 68.1817

[node name="Ball" type="RigidBody2D"]
position = Vector2( 290, 220 )
rotation = 1.0472
physics_material_override = SubResource( 1 )
gravity_scale = 9.0
continuous_cd = 1
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
scale = Vector2( 0.440001, 0.440001 )
shape = SubResource( 2 )

[node name="VisibilityNotifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( 3.05176e-005, -1.52588e-005 )
scale = Vector2( 3, 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="SmallDot" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 10, -10 )
rotation = -2.87979
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
